tests/baselines/reference/implementingAnInterfaceExtendingClassWithPrivates.errors.txt
==== tests/cases/conformance/interfaces/interfacesExtendingClasses/implementingAnInterfaceExtendingClassWithPrivates.ts (4 errors) ====
    class Foo {
        private x: string;
    }
    
    interface I extends Foo {
        y: number;
    }
    
    class Bar implements I { // error
          ~~~
!!! error TS2421: Class 'Bar' incorrectly implements interface 'I':
!!! error TS2421:   Property 'y' is missing in type 'Bar'.
    }
    
    class Bar2 implements I { // error
          ~~~~
!!! error TS2421: Class 'Bar2' incorrectly implements interface 'I':
!!! error TS2421:   Property 'x' is missing in type 'Bar2'.
        y: number;
    }
    
    class Bar3 implements I { // error
          ~~~~
!!! error TS2421: Class 'Bar3' incorrectly implements interface 'I':
!!! error TS2421:   Private property 'x' cannot be reimplemented.
        x: string;
        y: number;
    }
    
    class Bar4 implements I { // error
          ~~~~
!!! error TS2421: Class 'Bar4' incorrectly implements interface 'I':
!!! error TS2421:   Private property 'x' cannot be reimplemented.
        private x: string;
        y: number;
    }